# popcorn

./: .gitattributes  README.md
planner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
planner/VALfiles/: Action.cpp  Action.h  Analyser.h  Analysis.cpp  CMakeLists.txt  Cascader.h  Environment.cpp  Environment.h  Evaluator.cpp  Evaluator.h  Events.cpp  Events.h  Exceptions.h  FastEnvironment.cpp  FastEnvironment.h  FuncAnalysis.cpp  FuncAnalysis.h  FuncExp.cpp  FuncExp.h  GoalHypSpace.h  InstPropLinker.cpp  InstPropLinker.h  LaTeXSupport.cpp  LaTeXSupport.h  Makefile  Ownership.cpp  Ownership.h  Partitions.h  Plan.cpp  Plan.h  PlanExecutionTracker.h  Polynomial.cpp  Polynomial.h  PrettyPrinter.cpp  PrettyPrinter.h  Proposition.cpp  Proposition.h  Relax.cpp  RelaxTranslator.cpp  RelaxTranslator.h  (+46 more)
planner/VALfiles/parsing/: CMakeLists.txt  DebugWriteController.cpp  DebugWriteController.h  FlexLexer.h  Makefile  VisitController.h  WriteController.h  cmake_install.cmake  lex.yy.cc  lex.yy.h  macros.h  parse_error.h  pddl+.cpp  pddl+.yacc  ptree.cpp  ptree.h  sStack.h
planner/domains/: motivating example actions
planner/domains/AUV-Fuel/cqScotty_version/: domain01.pddl  domain02.pddl  domain03.pddl  domain04.pddl  domain05.pddl  domain06.pddl  domain07.pddl  domain08.pddl  domain09.pddl  domain10.pddl  domain11.pddl  domain12.pddl  pfile01.pddl  pfile02.pddl  pfile03.pddl  pfile04.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile08.pddl  pfile09.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl
planner/domains/AUV-Fuel/popcornR_version/: domain.pddl  pfile01.pddl  pfile02.pddl  pfile03.pddl  pfile04.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile08.pddl  pfile09.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl
planner/domains/Rovers/: domain.pddl  pfile01.pddl  pfile02.pddl  pfile03.pddl  pfile04.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile08.pddl  pfile09.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile20.pddl  script_prob_gen.ps1
planner/domains/airplane_cargo/: domain.pddl  pfile01.pddl  pfile02.pddl  pfile03.pddl  pfile04.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile08.pddl  pfile09.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile20.pddl  script_prob_gen.ps1
planner/domains/cashpoint/: domain.pddl  pfile01.pddl  pfile03.pddl  pfile04.pddl  pfile08.pddl  pfile10.pddl  pfile11.pddl  pfile13.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile20.pddl  script_prob_gen.ps1
planner/domains/non-temporal-cashpoint/: domain.pddl  pfile02.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile09.pddl  pfile12.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl
planner/domains/procurement/: README.txt  domain.pddl  pfile01.pddl  pfile02.pddl  pfile03.pddl  pfile04.pddl  pfile05.pddl  pfile06.pddl  pfile07.pddl  pfile08.pddl  pfile09.pddl  pfile10.pddl  pfile11.pddl  pfile12.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl  pfile20.pddl  script_popcorn_procurement.ps1
planner/domains/terraria_capacity/: README.txt  domain1.pddl  domain12.pddl  domain13to20.pddl  domain2.pddl  domain3.pddl  domain4.pddl  domain7.pddl  domain9.pddl  p13.pddl  p14.pddl  p15.pddl  p16.pddl  p17.pddl  p18.pddl  p6.pddl  p7.pddl  pfile13.pddl  pfile14.pddl  pfile15.pddl  pfile16.pddl  pfile17.pddl  pfile18.pddl  pfile19.pddl
planner/domains/unmodified_domains/domains/2D-AUV-Power/: domain1.pddl  domain10.pddl  domain11.pddl  domain12.pddl  domain2.pddl  domain3.pddl  domain4.pddl  domain5.pddl  domain6.pddl  domain7.pddl  domain8.pddl  domain9.pddl  p1.pddl  p11.pddl  p12.pddl  p2.pddl  p3.pddl  p4.pddl  p5.pddl  p6.pddl  p7.pddl  p9.pddl
planner/domains/unmodified_domains/domains/cashpoint/: domain0.pddl  domain1.pddl  domain10.pddl  domain12.pddl  domain2.pddl  domain3.pddl  domain4.pddl  domain5.pddl  domain6.pddl  domain7.pddl  domain8.pddl  p0.pddl  p1.pddl  p11.pddl  p12.pddl  p2.pddl  p8.pddl  p9.pddl
planner/domains/unmodified_domains/results/: popcornR_auv_results.pddl  popcornR_cashpoint_results.pddl  popcornR_logistics.pddl  popcornR_procurement.pddl  popcornR_rovers.pddl  popcornR_terraria_results.pddl  popcorn_logistics.pddl  popcorn_rovers.pddl
planner/popf/: AllowViolation.cpp  AllowViolation.h  Basbar.cpp  Branch.h  Busbar.h  CMakeLists.txt  CPLEXSolver.cpp  CPLEXSolver.hpp  Color.cpp  Color.h  Comparator.cpp  Comparator.h  DrawGraph.cpp  DrawGraph.h  EhcModified.cpp  EhcModified.h  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.cpp.bak  FFSolver.h  FFSolverNEW.cpp  FFSolverOK.cpp  Generator.h  GeneratorCostData.h  IPCompilation.cpp  IPCompilation.hpp  IPHeuristic.cpp  IPHeuristic.hpp  IPModel.cpp  IPModel.hpp  IPSA.cpp  IPSA.h  IPSolver.cpp  IPSolver.hpp  IPSolverInterface.cpp  IPSolverInterface.hpp  IPStateBasedModel.cpp  IPStateBasedModel.hpp  IPStateBasedUnified.cpp  (+64 more)
planner/popf/cmake/modules/: FindConcert.cmake  FindCplex.cmake
planner/tmp/: ActionEnd-pskel.cpp  ActionEnd-pskel.h  ActionEndType-pimpl.cpp  ActionEndType-pskel.cpp  ActionNameType-pimpl.cpp  ActionNameType-pskel.cpp  ActionParameterType-pimpl.cpp  ActionParameterType-pskel.cpp  ActionStartType-pimpl.h  AtomType-pimpl.h  AtomType-pskel.h  ConditionType-pimpl.h  ConditionType-pskel.h  Controllability-pimpl.h  Controllability-pskel.h  FailedByType-pimpl.h  FailedByType-pskel.h  FuncExpType-pimpl.h  FuncExpType-pskel.h  LiteralType-pimpl.h  LiteralType-pskel.h  OperationalFile-pimpl.h  OperationalFile-pskel.h  OperationalFile1-pimpl.h  OperationalFile1-pskel.h  ParamType-pimpl.h  ParamType-pskel.cpp  ParamType-pskel.h  ParametersType-pimpl.h  ParametersType-pskel.h  QualifiedConditionType-pimpl.cpp  QualifiedConditionType-pimpl.h  QualifiedConditionType-pskel.cpp  QualifiedConditionType-pskel.h  TimeoutType-pimpl.cpp  TimeoutType-pimpl.h  TimeoutType-pskel.cpp  TimeoutType-pskel.h
(+135 files in other folders)
